Fixed icons vertical alignment (#114)

--- a/css/popup.css
+++ b/css/popup.css
@@ -52,7 +52,10 @@ button {
 
 #about {
     padding: 16px;
-    
+}
+
+button>img {
+  vertical-align: middle;
 }
 
 button:active {
